// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion renders correctly in collapsed state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="py-2"
      >
        <h2>
          <button
            aria-controls="accordion-text-ID"
            aria-expanded="false"
            class="flex items-center justify-between w-full text-left py-2 outline-none focus-visible:outline-yellow-300"
          >
            <span>
              TITLE
            </span>
            <svg
              class="fill-neutral-950 shrink-0 ml-8"
              height="16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                class="ttransform origin-center transition duration-200 ease-out false"
                height="2"
                rx="1"
                width="16"
                y="7"
              />
              <rect
                class="transform origin-center rotate-90 transition duration-200 ease-out false"
                height="2"
                rx="1"
                width="16"
                y="7"
              />
            </svg>
          </button>
        </h2>
        <div
          aria-labelledby="accordion-title-ID"
          class="grid text-sm font-body overflow-hidden transition-all duration-300 ease-in-out grid-rows-[0fr] opacity-0"
          id="accordion-text-ID"
          role="region"
        >
          <div
            class="overflow-hidden"
          >
            <div
              class="whitespace-pre-wrap border border-black px-4 py-2 rounded-md bg-neutral-950 text-white selection:bg-yellow-200/50"
            >
              SOME BODY TEXT
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="py-2"
    >
      <h2>
        <button
          aria-controls="accordion-text-ID"
          aria-expanded="false"
          class="flex items-center justify-between w-full text-left py-2 outline-none focus-visible:outline-yellow-300"
        >
          <span>
            TITLE
          </span>
          <svg
            class="fill-neutral-950 shrink-0 ml-8"
            height="16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              class="ttransform origin-center transition duration-200 ease-out false"
              height="2"
              rx="1"
              width="16"
              y="7"
            />
            <rect
              class="transform origin-center rotate-90 transition duration-200 ease-out false"
              height="2"
              rx="1"
              width="16"
              y="7"
            />
          </svg>
        </button>
      </h2>
      <div
        aria-labelledby="accordion-title-ID"
        class="grid text-sm font-body overflow-hidden transition-all duration-300 ease-in-out grid-rows-[0fr] opacity-0"
        id="accordion-text-ID"
        role="region"
      >
        <div
          class="overflow-hidden"
        >
          <div
            class="whitespace-pre-wrap border border-black px-4 py-2 rounded-md bg-neutral-950 text-white selection:bg-yellow-200/50"
          >
            SOME BODY TEXT
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accordion renders correctly in opened state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="py-2"
      >
        <h2>
          <button
            aria-controls="accordion-text-ID"
            aria-expanded="true"
            class="flex items-center justify-between w-full text-left py-2 outline-none focus-visible:outline-yellow-300"
          >
            <span>
              TITLE
            </span>
            <svg
              class="fill-neutral-950 shrink-0 ml-8"
              height="16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                class="ttransform origin-center transition duration-200 ease-out !rotate-180"
                height="2"
                rx="1"
                width="16"
                y="7"
              />
              <rect
                class="transform origin-center rotate-90 transition duration-200 ease-out !rotate-180"
                height="2"
                rx="1"
                width="16"
                y="7"
              />
            </svg>
          </button>
        </h2>
        <div
          aria-labelledby="accordion-title-ID"
          class="grid text-sm font-body overflow-hidden transition-all duration-300 ease-in-out grid-rows-[1fr] opacity-100"
          id="accordion-text-ID"
          role="region"
        >
          <div
            class="overflow-hidden"
          >
            <div
              class="whitespace-pre-wrap border border-black px-4 py-2 rounded-md bg-neutral-950 text-white selection:bg-yellow-200/50"
            >
              SOME BODY TEXT
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="py-2"
    >
      <h2>
        <button
          aria-controls="accordion-text-ID"
          aria-expanded="true"
          class="flex items-center justify-between w-full text-left py-2 outline-none focus-visible:outline-yellow-300"
        >
          <span>
            TITLE
          </span>
          <svg
            class="fill-neutral-950 shrink-0 ml-8"
            height="16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              class="ttransform origin-center transition duration-200 ease-out !rotate-180"
              height="2"
              rx="1"
              width="16"
              y="7"
            />
            <rect
              class="transform origin-center rotate-90 transition duration-200 ease-out !rotate-180"
              height="2"
              rx="1"
              width="16"
              y="7"
            />
          </svg>
        </button>
      </h2>
      <div
        aria-labelledby="accordion-title-ID"
        class="grid text-sm font-body overflow-hidden transition-all duration-300 ease-in-out grid-rows-[1fr] opacity-100"
        id="accordion-text-ID"
        role="region"
      >
        <div
          class="overflow-hidden"
        >
          <div
            class="whitespace-pre-wrap border border-black px-4 py-2 rounded-md bg-neutral-950 text-white selection:bg-yellow-200/50"
          >
            SOME BODY TEXT
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accordion renders correctly once it's openened and closed again 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="py-2"
      >
        <h2>
          <button
            aria-controls="accordion-text-ID"
            aria-expanded="true"
            class="flex items-center justify-between w-full text-left py-2 outline-none focus-visible:outline-yellow-300"
          >
            <span>
              TITLE
            </span>
            <svg
              class="fill-neutral-950 shrink-0 ml-8"
              height="16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                class="ttransform origin-center transition duration-200 ease-out !rotate-180"
                height="2"
                rx="1"
                width="16"
                y="7"
              />
              <rect
                class="transform origin-center rotate-90 transition duration-200 ease-out !rotate-180"
                height="2"
                rx="1"
                width="16"
                y="7"
              />
            </svg>
          </button>
        </h2>
        <div
          aria-labelledby="accordion-title-ID"
          class="grid text-sm font-body overflow-hidden transition-all duration-300 ease-in-out grid-rows-[1fr] opacity-100"
          id="accordion-text-ID"
          role="region"
        >
          <div
            class="overflow-hidden"
          >
            <div
              class="whitespace-pre-wrap border border-black px-4 py-2 rounded-md bg-neutral-950 text-white selection:bg-yellow-200/50"
            >
              SOME BODY TEXT
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="py-2"
    >
      <h2>
        <button
          aria-controls="accordion-text-ID"
          aria-expanded="true"
          class="flex items-center justify-between w-full text-left py-2 outline-none focus-visible:outline-yellow-300"
        >
          <span>
            TITLE
          </span>
          <svg
            class="fill-neutral-950 shrink-0 ml-8"
            height="16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              class="ttransform origin-center transition duration-200 ease-out !rotate-180"
              height="2"
              rx="1"
              width="16"
              y="7"
            />
            <rect
              class="transform origin-center rotate-90 transition duration-200 ease-out !rotate-180"
              height="2"
              rx="1"
              width="16"
              y="7"
            />
          </svg>
        </button>
      </h2>
      <div
        aria-labelledby="accordion-title-ID"
        class="grid text-sm font-body overflow-hidden transition-all duration-300 ease-in-out grid-rows-[1fr] opacity-100"
        id="accordion-text-ID"
        role="region"
      >
        <div
          class="overflow-hidden"
        >
          <div
            class="whitespace-pre-wrap border border-black px-4 py-2 rounded-md bg-neutral-950 text-white selection:bg-yellow-200/50"
          >
            SOME BODY TEXT
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accordion renders correctly once it's openened and closed again 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="py-2"
      >
        <h2>
          <button
            aria-controls="accordion-text-ID"
            aria-expanded="false"
            class="flex items-center justify-between w-full text-left py-2 outline-none focus-visible:outline-yellow-300"
          >
            <span>
              TITLE
            </span>
            <svg
              class="fill-neutral-950 shrink-0 ml-8"
              height="16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                class="ttransform origin-center transition duration-200 ease-out false"
                height="2"
                rx="1"
                width="16"
                y="7"
              />
              <rect
                class="transform origin-center rotate-90 transition duration-200 ease-out false"
                height="2"
                rx="1"
                width="16"
                y="7"
              />
            </svg>
          </button>
        </h2>
        <div
          aria-labelledby="accordion-title-ID"
          class="grid text-sm font-body overflow-hidden transition-all duration-300 ease-in-out grid-rows-[0fr] opacity-0"
          id="accordion-text-ID"
          role="region"
        >
          <div
            class="overflow-hidden"
          >
            <div
              class="whitespace-pre-wrap border border-black px-4 py-2 rounded-md bg-neutral-950 text-white selection:bg-yellow-200/50"
            >
              SOME BODY TEXT
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="py-2"
    >
      <h2>
        <button
          aria-controls="accordion-text-ID"
          aria-expanded="false"
          class="flex items-center justify-between w-full text-left py-2 outline-none focus-visible:outline-yellow-300"
        >
          <span>
            TITLE
          </span>
          <svg
            class="fill-neutral-950 shrink-0 ml-8"
            height="16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              class="ttransform origin-center transition duration-200 ease-out false"
              height="2"
              rx="1"
              width="16"
              y="7"
            />
            <rect
              class="transform origin-center rotate-90 transition duration-200 ease-out false"
              height="2"
              rx="1"
              width="16"
              y="7"
            />
          </svg>
        </button>
      </h2>
      <div
        aria-labelledby="accordion-title-ID"
        class="grid text-sm font-body overflow-hidden transition-all duration-300 ease-in-out grid-rows-[0fr] opacity-0"
        id="accordion-text-ID"
        role="region"
      >
        <div
          class="overflow-hidden"
        >
          <div
            class="whitespace-pre-wrap border border-black px-4 py-2 rounded-md bg-neutral-950 text-white selection:bg-yellow-200/50"
          >
            SOME BODY TEXT
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
